# luiza2

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  sqitch.conf  sqitch.plan
app/: __init__.py  auth.py  cli.py  config.py  content_store.py  db.py  gallery_store.py  models.py  records_store.py  storage.py
app/blueprints/admin/: __init__.py  routes.py
app/blueprints/admin/static/css/: admin.css
app/blueprints/admin/static/js/: admin.js
app/blueprints/admin/templates/admin/: base.html  clients.html  content.html  login.html
app/blueprints/site/: __init__.py  routes.py
app/blueprints/site/templates/site/: index.html
deploy/: entrypoint.sh  supervisord.conf  uwsgi.ini
etc/: settings_docker.py
migrations/: env.py
migrations/versions/: 001_initial.py
sqitch/: sqitch.conf  sqitch.plan
sqitch/deploy/: init.sql
sqitch/revert/: init.sql
sqitch/verify/: init.sql
src/: __init__.py  app.py  content_store.py  db.py  extensions.py  photo_store.py  records_store.py  settings.py
src/blueprints/admin/: __init__.py  routes.py
src/blueprints/admin/templates/admin/: base.html  content.html  dashboard.html  login.html
src/blueprints/landing/: __init__.py  routes.py
src/blueprints/landing/templates/landing/: index.html
src/blueprints/site/: __init__.py  routes.py
src/blueprints/site/static/css/: site.css
src/blueprints/site/static/js/: site.js
src/blueprints/site/templates/site/: base.html  index.html
src/static/css/: app.css
src/templates/: base.html
